# StockX

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py  streamlit_app.py
data/: universe.csv
docs/: KITE_SETUP.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.js
frontend/utils/: api.js  intraday_api.js
models/intraday/: orb_xgboost.pkl  vwap_reversion_xgboost.pkl
src/: pipeline.py  pipeline_enhanced.py
src/api/: app.py  endpoints.py  intraday_endpoints.py
src/backtest/: portfolio_strategy.py  simulation.py  verify_backtest.py
src/data_ingestion/: backfill.py  india_data.py  polygon_data.py  quality_filters.py  universe.py
src/features/: engine.py  regimes.py  technical.py  verify_features.py
src/intraday/: backfill_historical.py  features.py  schema.py  universe_selector.py
src/intraday/data_ingestion/: kite_client.py  yahoo_intraday.py
src/intraday/models/: inference.py  train.py
src/intraday/setups/: orb.py  vwap_reversion.py
src/models/: labeling.py  ranking.py  train.py  verify_model.py
src/shared/: database.py  models.py
